# Credem_Hack_2025

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  DOCKER_TROUBLESHOOTING.md  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  env.example  extracted_data.csv  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
app/: __init__.py  config.py  exporter.py  gcs_utils.py  main.py
app/api/v1/: deps.py
app/api/v1/endpoints/: agent.py  health.py  items.py  users.py
app/core/: config.py  database.py
app/core/agent/: __init__.py  agent.py  base_prompt.txt  config.py  tools.py
app/core/llm/: __init__.py  factory.py
app/etl/: pipeline.py
app/etl_db_data/: README.md  clusters.csv  doc_trains.csv
app/ocr/: document_ai.py
app/schemas/: health.py
app/tests/: test_health.py
app/utils/: file_formatting.py  parsing.py  reading.py
documents/: DEPLOYMENT_GCLOUD.md  TROUBLESHOOTING.md
etl_db_data/: personale.csv
frontend/: Dockerfile  Home.py
frontend/.streamlit/: config.toml
frontend/pages/: 03_Chat.py
gcp/: run.yaml
media/: README.md
notebooks/: Docs Train.xlsx  README.md  etl.ipynb  eval.ipynb  pipeline.py  prova.bat
