[project]
name = "credem-hack-2025"
version = "0.1.0"
description = "AI HR System Hackathon Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "httpx",
    "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "openai",
    "langchain",
    "langchain-openai",
    "scikit-learn",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "python-dotenv",
    "pre-commit>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "factory-boy",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "detect-secrets",
    "structlog",
    "rich",
    "python-dateutil",
    "pytz"
]
