[project]
name = "credem-hack-2025"
version = "0.1.0"
description = "AI HR System Hackathon Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "httpx",
    "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "openai",
    "langchain",
    "langchain-openai",
    "scikit-learn",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "python-dotenv",
    "pre-commit>=4.2.0",
    "requests>=2.32.4",
    "langchain-core>=0.3.65",
    "langgraph>=0.4.8",
    "langchain-groq>=0.3.2",
    "langchain-google-genai>=2.1.5",
    "langchain-community>=0.3.25",
    "google-cloud-storage",
    "google-cloud-documentai",
    "google-cloud-aiplatform",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "factory-boy",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "detect-secrets",
    "structlog",
    "rich",
    "python-dateutil",
    "pytz"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
