[project]
name = "credem-hack-2025"
version = "0.1.0"
description = "AI HR System Hackathon Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "pandas",
    "numpy",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "python-dotenv",
    "google-cloud-storage",
    "google-cloud-documentai",
    "google-cloud-aiplatform",
    "google-generativeai>=0.8.5",
    "dotenv>=0.9.9",
    "fsspec>=2025.5.1",
    "gcsfs>=2025.5.1",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "factory-boy",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "detect-secrets",
    "structlog",
    "rich",
    "python-dateutil",
    "pytz",
    "pre-commit",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
